# educase

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  TASKS.md  build_all.bat  build_constructor.bat  build_installer.bat  build_player.bat  pyproject.toml
.claude/agents/: architect.md  code-reviewer.md  reality-checker.md  senior-developer.md  ui-builder.md
.codex/agents/: architect.toml  code-reviewer.toml  reality-checker.toml  senior-developer.toml  ui-builder.toml
.github/workflows/: quality.yml
docs/: DATA_MODEL.md  decisions.md  questions_for_department.md  skills_plan.md
docs/adr/: 013-scheme-image-hotspots.md  014-department-feedback-manual-grading.md  015-document-attachment-mode.md  016-advisory-machine-review.md  README.md
docs/specs/: FEATURE-01-archive-codecs.md
packaging/: constructor.spec  installer.iss  player.spec
scripts/: make_sample_case.py  shoot_stages.py
src/epicase_constructor/: __init__.py  __main__.py
src/epicase_core/: __init__.py  config.py  logging.py
src/epicase_player/: __init__.py  __main__.py
src/epicase_ui/: __init__.py  animated_start.py  application_identity.py  brand_mark.py  branding.py  hotspot_icons.py  hotspot_marker.py  investigation_map.py
tests/: conftest.py  test_entrypoints.py  test_installer_packaging.py  test_packaging_specs.py
tests/constructor/: test_asset_picker.py  test_asset_picker_signal.py  test_branch_editor.py  test_case_editor.py  test_case_load.py  test_case_saved_view.py  test_clinical_editor.py  test_confirm_dialog.py  test_contacts_editor.py  test_document_editor.py  test_environment_editor.py  test_final_editor.py  test_list_cards.py  (+11 more)
tools/: __init__.py  generate_app_icons.py
(+205 files in other folders)
