[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epicase"
version = "0.1.0"
description = "EpiCase — тренажёр для подготовки военных эпидемиологов (Constructor + Player)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "mypy>=1.11",
    "pyinstaller>=6.0",
]

# Две раздельные программы — два GUI-входа (gui-scripts: без консольного окна в Windows).
[project.gui-scripts]
epicase-constructor = "epicase_constructor.__main__:main"
epicase-player = "epicase_player.__main__:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/epicase_core",
    "src/epicase_constructor",
    "src/epicase_player",
]

# ---- Качество кода ----

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Проект русскоязычный: не считаем кириллицу в строках/докстрингах/комментариях ошибкой.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["epicase_core", "epicase_constructor", "epicase_player"]

# PySide6 и pytest-qt поставляют неполные стабы — точечно гасим шум по missing imports.
[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytestqt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"